automation.log
2025-02-17 20:31:08,723 - INFO - Launching OpenFin application...
2025-02-17 20:55:29,158 - INFO - Launching OpenFin application...
2025-02-17 20:58:24,050 - INFO - Launching OpenFin application...
2025-02-17 21:08:52,541 - INFO - Launching OpenFin application...
2025-02-17 21:09:40,759 - INFO - Launching OpenFin application...
2025-02-17 23:04:04,623 - INFO - Launching OpenFin application...
2025-02-17 23:04:04,690 - INFO - Waiting for the OpenFin login window to appear...
2025-02-17 23:04:34,693 - ERROR - Login window not found!
2025-02-17 23:04:34,693 - ERROR - Login test failed.
2025-02-17 23:07:23,744 - INFO - Launching OpenFin application...
2025-02-17 23:07:23,846 - INFO - Waiting for the OpenFin login window to appear...
2025-02-17 23:07:53,849 - ERROR - Login window not found!
2025-02-17 23:07:53,849 - ERROR - Login test failed.
2025-02-17 23:23:36,543 - INFO - Launching OpenFin application...
2025-02-17 23:23:36,587 - INFO - Waiting for the OpenFin login window to appear...
2025-02-17 23:23:55,983 - INFO - Filling in login credentials...
2025-02-17 23:23:58,454 - INFO - Login attempt made.
2025-02-17 23:34:38,939 - INFO - Launching OpenFin application...
2025-02-17 23:34:38,990 - INFO - Waiting for the OpenFin login window to appear...
2025-02-17 23:35:08,991 - ERROR - Login window not found!
2025-02-17 23:35:08,991 - ERROR - Login test failed.
2025-02-17 23:37:01,676 - INFO - Launching OpenFin application...
2025-02-17 23:37:01,709 - INFO - Waiting for the OpenFin login window to appear...
2025-02-17 23:37:31,709 - ERROR - Login window not found!
2025-02-17 23:37:31,709 - ERROR - Login test failed.
2025-02-18 00:02:43,565 - INFO - Launching OpenFin application...
2025-02-18 00:02:43,620 - INFO - Waiting for the OpenFin login window to appear...
2025-02-18 00:03:13,636 - ERROR - Login window not found!
2025-02-18 00:03:13,637 - ERROR - Login test failed.
2025-02-18 00:13:24,496 - INFO - Launching OpenFin application...
2025-02-18 00:13:24,526 - INFO - Waiting for the OpenFin login window to appear...
2025-02-18 00:13:54,526 - ERROR - Login window not found!
2025-02-18 00:13:54,526 - ERROR - Login test failed.

(venv) PS C:\Automation\automation_suite> python -m tests.test_login_logout   
2025-02-26 17:00:08,107 - INFO - Starting the login/logout test...
2025-02-26 17:00:08,108 - INFO - Launching OpenFin application...
fins://fo-openfin.uat.apps.uk.mizuho-sc.com/user/ranaka
2025-02-26 17:00:23,165 - INFO - Waiting for the Mizuho login window to appear...
2025-02-26 17:00:37,281 - INFO - Filling in login credentials...


(venv) PS C:\Automation\automation_suite> python -m tests.test_login_logout
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "C:\Automation\automation_suite\tests\test_login_logout.py", line 2, in <module>
    from openfin.login import automate_login
  File "C:\Automation\automation_suite\openfin\login.py", line 41
    except Exception as e:
    ^^^^^^
SyntaxError: invalid syntax